objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>PMO_Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMO Billing</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Time Entries (PMO Billing)</relationshipLabel>
        <relationshipName>Time_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PMO_Billing__c</columns>
        <columns>Project__c</columns>
        <columns>Total_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>